--- a/requirements.txt
+++ b/requirements.txt
@@ -17,5 +17,8 @@ google-auth-httplib2>=0.2.0
 requests>=2.31.0
 urllib3>=2.1.0
 
+# Environment variable management
+python-dotenv>=1.0.0
+
 # Additional dependencies for production
 python-multipart>=0.0.6
