use only service account

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,7 @@
 ENVIRONMENT=development  # or 'production'
 PORT=8000
 
-# Google Credentials
-GOOGLE_CREDENTIALS_FILE=oauth_cred.json
+# Google Service Account Credentials (REQUIRED)
 GOOGLE_SERVICE_ACCOUNT_FILE=cred.json
 # For production, you can also use:
 # GOOGLE_CREDENTIALS={"type":"service_account","project_id":"..."}
