--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,9 @@ pydantic>=2.5.0
 pandas>=2.1.4
 numpy>=1.24.3
 
-# Google APIs
+# Google APIs - Service Account only
 gspread>=5.12.4
 google-auth>=2.25.2
-google-auth-oauthlib>=1.2.0
-google-auth-httplib2>=0.2.0
 
 # HTTP requests
 requests>=2.31.0
