add delays analysis and fill the summary table

--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,14 @@ TABLEAU_TOKEN_VALUE=your_tableau_token_value
 TABLEAU_SITE_CONTENT_URL=your_site_content_url
 TABLEAU_WORKBOOK_NAME=8 Department wise tables for chats & calls
 
-# Google Spreadsheet IDs
+# Google Spreadsheet IDs - Repetitions Analysis
 APPLICANTS_SPREADSHEET_ID=your_applicants_spreadsheet_id
 DOCTORS_SPREADSHEET_ID=your_doctors_spreadsheet_id
 MV_RESOLVERS_SPREADSHEET_ID=your_mv_resolvers_spreadsheet_id
 CC_SALES_SPREADSHEET_ID=your_cc_sales_spreadsheet_id
+
+# Google Spreadsheet IDs - Delays Analysis (Optional)
+APPLICANTS_DELAYS_SPREADSHEET_ID=your_applicants_delays_spreadsheet_id
+DOCTORS_DELAYS_SPREADSHEET_ID=your_doctors_delays_spreadsheet_id
+MV_RESOLVERS_DELAYS_SPREADSHEET_ID=your_mv_resolvers_delays_spreadsheet_id
+CC_SALES_DELAYS_SPREADSHEET_ID=your_cc_sales_delays_spreadsheet_id
