--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ pydantic>=2.5.0
 pandas>=2.1.4
 numpy>=1.24.3
 
+# Tableau Integration
+tableauserverclient>=0.30
+
 # Google APIs - Service Account only
 gspread>=5.12.4
 google-auth>=2.25.2
